--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
         "react/jsx-props-no-spreading": "off",
         "react/require-default-props": ["off"],
         "react/default-props-match-prop-types": ["error"],
+        "react/no-array-index-key": ["off"],
         "react/function-component-definition": [
             2,
             {
