--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.4",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "start-server-and-test": "^1.15.2"
   },
   "jest": {
     "moduleNameMapper": {
